fix(datepicker): calendar panel theme supports dark mode
Closes #11200

--- a/src/components/datepicker/datePicker-theme.scss
+++ b/src/components/datepicker/datePicker-theme.scss
@@ -57,7 +57,7 @@
   }
 
   .md-datepicker-calendar {
-    background: '{{background-A100}}';
+    background: '{{background-hue-1}}';
   }
 
   $mask-color: '{{background-hue-1}}';
